--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ env_logger = "0.11.6"
 indicatif = "0.17.9"
 log = "0.4.22"
 native-tls = "0.2.12"
-polars = { version = "0.45.1", features = ['serde'] }
+polars = { version = "0.45.1", features = ['serde', 'lazy'] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 serde = { version = "1.0.217", features = ["derive"] }
@@ -20,6 +20,7 @@ sqlx = { version = "0.8.2", features = [
     'postgres',
     'runtime-tokio-rustls',
     'macros',
+    'chrono',
 ] }
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = ["full"] }
