--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,9 @@ native-tls = "0.2.12"
 polars = { version = "0.45.1", features = ['serde', 'lazy'] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
+rust_decimal = "1.36.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
-sqlx = { version = "0.8.2", features = [
-    'postgres',
-    'runtime-tokio-rustls',
-    'macros',
-    'chrono',
-] }
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = ["full"] }
-tokio-postgres = { version = "0.7.12" }
+tokio-postgres = { version = "0.7.12", features = ['with-chrono-0_4'] }
