--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ env_logger = "0.11.6"
 indicatif = "0.17.9"
 log = "0.4.22"
 native-tls = "0.2.12"
-polars = { version = "0.45.1", features = ['serde', 'lazy'] }
+polars = { version = "0.45.1", features = ['serde', 'lazy', 'parquet'] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 rust_decimal = "1.36.0"
