--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+bigdecimal = "0.4.7"
 chrono = { version = "0.4.39", features = ["serde"] }
 dotenv = "0.15.0"
 env_logger = "0.11.6"
@@ -14,7 +15,7 @@ native-tls = "0.2.12"
 polars = { version = "0.45.1", features = ['serde', 'lazy', 'parquet'] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
-rust_decimal = "1.36.0"
+rust_decimal = {version = "1.36.0", features = ["db-postgres"]}
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
 thiserror = "2.0.9"
