--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ native-tls = "0.2.12"
 polars = { version = "0.45.1", features = ['serde', 'lazy', 'parquet'] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
-rust_decimal = {version = "1.36.0", features = ["db-postgres"]}
+rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-postgres = { version = "0.7.12", features = ['with-chrono-0_4'] }
+
+[profile.dev]
+incremental = true
