--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,12 @@ env_logger = "0.11.6"
 indicatif = "0.17.9"
 log = "0.4.22"
 native-tls = "0.2.12"
-polars = { version = "0.45.1", features = ['serde', 'lazy', 'parquet'] }
+polars = { version = "0.45.1", features = [
+    'serde',
+    'lazy',
+    'parquet',
+    'dtype-i16',
+] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
