--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,13 @@ env_logger = "0.11.6"
 indicatif = "0.17.9"
 log = "0.4.22"
 native-tls = "0.2.12"
+ndarray = { version = "0.16.1", features = ["serde"] }
 polars = { version = "0.45.1", features = [
     'serde',
     'lazy',
     'parquet',
     'dtype-i16',
+    'ndarray',
 ] }
 postgres-native-tls = "0.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
@@ -28,4 +30,4 @@ tokio = { version = "1.42.0", features = ["full"] }
 tokio-postgres = { version = "0.7.12", features = ['with-chrono-0_4'] }
 
 [profile.dev]
-incremental = true
+debug = 1
