--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rusqlite = { version = "0.32.1", features = ["bundled"] }
 rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
+tempfile = "3.15.0"
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-postgres = { version = "0.7.12", features = ['with-chrono-0_4'] }
